# cinnamon

./: .eslintrc.json  .git-blame-ignore-revs  .gitignore  .project  .pylintrc  .travis.yml  ABOUT-NLS  AUTHORS  COPYING  Cinnamal Differences  Makefile.am  Makefile.in  NEWS  README  README.rst  Yubico  aclocal.m4  autogen.sh  cinnamon-autogen.sh  cinnamon-wayland.session.in  cinnamon.pot  cinnamon.session.in  cinnamon2d.session.in  config.h.in  configure  configure.ac  generate_additional_files.py  generate_cs_module_desktop_files.py  gulpfile.js  install-cinnamon-system.sh  makepot  meson.build  meson_options.txt  package-lock.json  package.json  polkit.its  polkit.loc  restore  restore-cinnamon-system.sh  test  (+2 more)
browser-plugin/: Makefile.am  Makefile.in  README  browser-plugin.c
calendar-server/: cinnamon-calendar-server.in  cinnamon-calendar-server.py  meson.build  org.cinnamon.CalendarServer.service.in
data/: Makefile.am  Makefile.in  README.osk-layouts  cinnamon-osk-layouts.gresource.xml  cinnamon-wayland.desktop.in.in  cinnamon.desktop.in.in  cinnamon.desktop.in.notrad  cinnamon.schemas  cinnamon2d.desktop.in.in  emoji.json  gnome-shell.desktop.in.in  gnome-shell.schemas  meson.build  org.cinnamon.desktop.screensaver.gschema.xml  org.cinnamon.gestures.gschema.xml  org.cinnamon.gschema.xml  org.cinnamon.gschema.xml.in  org.gnome.shell.gschema.xml.in  update-osk-layouts.sh
data/cldr2json/: README.md  cldr2json.py
data/icons/: Makefile.am  find_icons.sh  meson.build
data/osk-layouts/: am.json  ara.json  be.json  bg.json  by.json  ca.json  cz.json  de.json  dk.json  ee.json  epo.json  es+cat.json  es.json  fi.json  fr.json  ge.json  gr.json  hr.json  hu.json  id.json  il.json  in+bolnagri.json  in+mal.json  ir.json  is.json  it.json  ke.json  kg.json  kh.json  la.json  latam.json  lt.json  lv.json  mk.json  mn.json  my.json  nl.json  no.json  ph.json  pl.json  (+15 more)
data/pam/: cinnamon.pam  cinnamon.pam.debian  meson.build
data/search_providers/: google.xml  wikipedia.xml
data/services/: meson.build  org.Cinnamon.HotplugSniffer.service.in  org.Cinnamon.Melange.service.in  org.Cinnamon.Slideshow.service.in  org.cinnamon.BackupLocker.service.in  org.cinnamon.CalendarServer.service.in
data/shaders/: dim-window.glsl
data/theme/: cinnamon.css  gdm.css  gnome-shell.css  meson.build  parse-sass.sh  theme-changelog.txt
data/wayland_sessions/: cinnamon-wayland.desktop.in  meson.build
data/xdg-portal/: meson.build  x-cinnamon-portals.conf
data/xsessions/: cinnamon.desktop.in  cinnamon2d.desktop.in  meson.build
install-scripts/: add_symlink.py  meson.build  meson_install_schemas.py  meson_update_icon_cache.py
js/: Makefile.am  Makefile.in  meson.build  tsconfig.json
js/gdm/: batch.js  consoleKit.js  fingerprint.js  loginDialog.js  powerMenu.js
js/misc/: appletSettings.js  authClient.js  config.js  config.js.in  connector.js  docInfo.d.ts  docInfo.js  fcitxInputMethod.js  fileDialog.js  fileUtils.js  format.js  gnomeSession.js  gridNavigator.js  history.js  ibusManager.js  imFramework.js  inhibitor.js  inputMethod.js  interfaces.js  keyboardLayouts.js  loginManager.js  modemManager.js  mprisPlayer.js  params.js  pointerTracker.js  portalHandlers.js  powerUtils.js  screenSaver.js  signalManager.js  signalTracker.js  spiceUpdateChecker.js  state.js  timers.js  util.js  windowUtils.js
js/perf/: core.js
js/testing/: testAutorunDialog.js  testKeyringPrompt.js  testMountDialogs.js
js/ui/: accessibility.js  altTab.js  appDisplay.js  appFavorites.js  applet.js  appletManager.js  appletSettings.js  audioDeviceSelection.js  automountManager.js  autorunManager.js  background.js  backgroundManager.js  barLevel.js  baseDialog.js  boxpointer.js  calendar.js  checkBox.js  cinnamonDBus.js  cinnamonEntry.js  cinnamonMountOperation.js  closeDialog.js  contactDisplay.js  ctrlAltTab.js  dash.js  dateMenu.js  dbusMenu.js  desklet.js  deskletManager.js  deskletSettings.js  dialog.js  displayChangesDialog.js  dnd.js  docDisplay.js  edgeFlip.js  endSessionDialog.js  environment.js  expo.js  expoThumbnail.js  expoView.js  extension.js  (+92 more)
python3/: meson.build
python3/cinnamon/: __init__.py  harvester.py  logger.py  proxygsettings.py  updates.py
src/: Makefile-calendar-server.am  Makefile-gvc.am  Makefile-hotplug-sniffer.am  Makefile-st.am  Makefile-tray.am  Makefile.am  Makefile.in  cinnamon-a11y.c  cinnamon-a11y.h  cinnamon-action-mode.h  cinnamon-app-private.h  cinnamon-app-system-private.h  cinnamon-app-system.c  cinnamon-app-system.h  cinnamon-app-usage.c  cinnamon-app-usage.h  cinnamon-app.c  cinnamon-app.h  cinnamon-arrow.c  cinnamon-arrow.h  cinnamon-background-manager.c  cinnamon-background-manager.h  cinnamon-blur-effect.c  cinnamon-blur-effect.h  cinnamon-contact-system.c  cinnamon-contact-system.h  cinnamon-doc-system.c  cinnamon-doc-system.h  cinnamon-embedded-window-private.h  cinnamon-embedded-window.c  cinnamon-embedded-window.h  cinnamon-enum-types.c  cinnamon-enum-types.c.in  cinnamon-enum-types.h  cinnamon-enum-types.h.in  cinnamon-extension-tool.in  cinnamon-generic-container.c  cinnamon-generic-container.h  cinnamon-global-private.h  cinnamon-global.c  (+159 more)
src/calendar-server/: README  calendar-debug.h  calendar-sources.c  calendar-sources.h  cinnamon-calendar-server.c  gnome-shell-calendar-server.c  org.Cinnamon.CalendarServer.service.in  org.gnome.Shell.CalendarServer.service.in
src/gvc/: gvc-channel-map-private.h  gvc-channel-map.c  gvc-channel-map.h  gvc-mixer-card-private.h  gvc-mixer-card.c  gvc-mixer-card.h  gvc-mixer-control-private.h  gvc-mixer-control.c  gvc-mixer-control.h  gvc-mixer-event-role.c  gvc-mixer-event-role.h  gvc-mixer-sink-input.c  gvc-mixer-sink-input.h  gvc-mixer-sink.c  gvc-mixer-sink.h  gvc-mixer-source-output.c  gvc-mixer-source-output.h  gvc-mixer-source.c  gvc-mixer-source.h  gvc-mixer-stream-private.h  gvc-mixer-stream.c  gvc-mixer-stream.h  gvc-mixer-ui-device.c  gvc-mixer-ui-device.h  gvc-pulseaudio-fake.h
src/hotplug-sniffer/: meson.build  (+8 more)
tests/: Makefile.am  Makefile.in  meson.build  run-test.sh.in  test-cinnamon-close-dialog
(+1171 files in other folders)
