option('docs',
    type: 'boolean',
    value: false,
    description: 'Build the API references (requires gtk-doc)'
)
option('deprecated_warnings',
    type: 'boolean',
    value: false,
    description: 'Show build warnings for deprecations'
)
option('build_recorder',
    type: 'boolean',
    value: true,
    description: 'Build the cinnamon recorder into source'
)
option('nm_agent',
    type: 'combo',
    choices: ['internal', 'external', 'disabled'],
    value: 'internal',
    description: 'Which network agent to use - internal: use built-in, external: require nm-applet in the session, disabled: not using NetworkManager'
)
option('py3modules_dir',
    type : 'string',
    value : '',
    description: 'Where to install python3 modules'
)
option('wayland',
    type : 'boolean',
    value : true,
    description: 'Enable wayland support'
)
option('exclude_info_settings',
    type : 'boolean',
    value : false,
    description: 'Exclude Info settings'
)

